--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
+    "final-form": "^4.20.1",
     "flux": "^3.1.3",
     "lodash.find": "^4.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-final-form": "^6.5.2",
     "react-ga": "^2.5.6",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
