--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
-    "final-form": "^4.20.1",
+    "final-form": "^4.2.0",
     "flux": "^3.1.3",
+    "form-serialize": "^0.7.2",
     "lodash.find": "^4.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-final-form": "^6.5.2",
+    "react-final-form": "^3.1.0",
     "react-ga": "^2.5.6",
     "react-quill": "^1.3.3",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "shards-react": "^1.0.0",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "simple-crypto-js": "^3.0.0",
+    "sort-by": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
