--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build", 
     "build:prod": "npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +45,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
