--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash.find": "^4.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-dotenv": "^0.1.3",
     "react-final-form": "^3.1.0",
     "react-ga": "^2.5.6",
     "react-quill": "^1.3.3",
