--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dotenv": "^0.1.3",
     "react-final-form": "^3.1.0",
     "react-ga": "^2.5.6",
+    "react-notifications": "^1.7.2",
     "react-quill": "^1.3.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
