--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "lodash.find": "^4.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-dotenv": "^0.1.3",
     "react-final-form": "^3.1.0",
     "react-ga": "^2.5.6",
     "react-notifications": "^1.7.2",
@@ -31,9 +30,9 @@
     "sort-by": "^1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build:prod": "npm run build",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build:prod": "react-dotenv && npm run build",
+    "build": "react-dotenv &&  react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,5 +44,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "react-dotenv": {
+    "whitelist": ["SECRET, FILE_API_URL, USER_API_URL"]
+  }
 }
