--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "sort-by": "^1.2.0"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
-    "build:prod": "react-dotenv && npm run build",
-    "build": "react-dotenv &&  react-scripts build",
+    "start": "react-scripts start",
+    "build:prod": "npm run build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,8 +44,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "react-dotenv": {
-    "whitelist": ["SECRET, FILE_API_URL, USER_API_URL"]
-  }
+  ]
 }
