--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
     "final-form": "^4.2.0",
+    "final-form-arrays": "^3.0.2",
     "flux": "^3.1.3",
     "form-serialize": "^0.7.2",
     "lodash.find": "^4.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-final-form": "^3.1.0",
+    "react-final-form-arrays": "^1.1.0",
     "react-ga": "^2.5.6",
+    "react-input-mask": "^2.0.4",
     "react-notifications": "^1.7.2",
     "react-quill": "^1.3.3",
     "react-redux": "^5.0.6",
